--- a/mysite/blog/templates/article_delete.html
+++ b/mysite/blog/templates/article_delete.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block title %}Delete{% endblock %}
 {% block content %}
     <div class="container d-flex justify-content-center" style="max-width:500px; height:80vh">
     <form method="POST" >
