--- a/mysite/blog/templates/registration/password_reset_confirm.html
+++ b/mysite/blog/templates/registration/password_reset_confirm.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Confirm{% endblock %}
 {% block content %}
     {% if validlink %}
     <div class="container mb-3 mt-3" style="max-width:500px; height:100vh">
