--- a/mysite/blog/templates/article_add.html
+++ b/mysite/blog/templates/article_add.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% block title %}New Article{% endblock %}
 {% block content %}
      <div class="container d-flex flex-column justify-content-center" style="max-width:500px;">
         <h4 class="text-center mb-5" style="font-style:italic;">New Article</h4>
