--- a/mysite/blog/templates/registration/logged_out.html
+++ b/mysite/blog/templates/registration/logged_out.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Logged Out{% endblock %}
 {% block content %}
   <div  class="container d-flex flex-column justify-content-center">
     <h3 class="text-center">You have successfully logged out!</h3>
