--- a/mysite/blog/templates/registration/password_reset_complete.html
+++ b/mysite/blog/templates/registration/password_reset_complete.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Reset{% endblock %}
 {% block content %}
   <div class="container mb-3 mt-3 text-center">
     <h3>Password have been changed</h3>
