--- a/mysite/blog/templates/registration/password_reset_form.html
+++ b/mysite/blog/templates/registration/password_reset_form.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Reset{% endblock %}
 {% block content %}
   <form class="container mb-3 mt-3 text-center" method="post">
   {% csrf_token %}
