--- a/mysite/blog/templates/profile.html
+++ b/mysite/blog/templates/profile.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 {% block title %}Profile{% endblock %}
 {% block content %}
     <div class="container d-flex flex-column justify-content-center" style="max-width:500px;">
