--- a/mysite/blog/templates/registration/password_reset_complete.html
+++ b/mysite/blog/templates/registration/password_reset_complete.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Reset{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Completed' %}{% endblock %}
 {% block content %}
   <div class="container mb-3 mt-3 text-center">
-    <h3>Password have been changed</h3>
-   <p><a href="{% url 'login' %}">Log In again</a></p>
+    <h3>{% trans 'Password have been changed' %}</h3>
+   <p><a href="{% url 'login' %}">{% trans 'Log In again' %}</a></p>
 </div>
 
 {% endblock %}
