--- a/mysite/blog/templates/registration/password_reset_done.html
+++ b/mysite/blog/templates/registration/password_reset_done.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-{% block title %}Done{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Done' %}{% endblock %}
 {% block content %}
 <div class="container mb-3 mt-3 text-center">
-  <p>We sent password change link in your email, please check.</p>
+  <p>{% trans 'We sent password change link in your email, please check.' %}</p>
 </div>
 {% endblock %}
