--- a/mysite/blog/templates/article_add.html
+++ b/mysite/blog/templates/article_add.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 {% load static %}
+{% load i18n %}
 {% load crispy_forms_tags %}
-{% block title %}New Article{% endblock %}
+{% block title %}{% trans 'New Article' %}{% endblock %}
 {% block content %}
      <div class="container d-flex flex-column justify-content-center" style="max-width:500px;">
-        <h4 class="text-center mb-5" style="font-style:italic;">New Article</h4>
+        <h4 class="text-center mb-5" style="font-style:italic;">{% trans 'Add article' %}</h4>
         <div class="form-group ">
             <form method="post">
                 {% csrf_token %}
                  {{ form|crispy }}
             <div class="d-flex flex-column">
-                <button class="btn btn-grad my-3" type="submit" style="min-width:100px">Save</button>
-                <button class="btn btn-delete my-3" onclick="javascript:history.back();" style="min-width:100px">Cancel</button>
+                <button class="btn btn-grad my-3" type="submit" style="min-width:100px">{% trans 'Save' %}</button>
+                <button class="btn btn-delete my-3" onclick="javascript:history.back();" style="min-width:100px">{% trans 'Cancel' %}</button>
             </div>
             </form>
         </div>
