--- a/mysite/blog/templates/article_detail.html
+++ b/mysite/blog/templates/article_detail.html
@@ -1,36 +1,36 @@
 {% extends "base.html" %}
-
-{% block title %}Article{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Article' %}{% endblock %}
 
 {% block content %}
 <div class="container mb-3 mt-3 text-center" >
     <h3 style="font-style:italic;">{{article.title}}</h3>
-    <strong>Created:</strong>&nbsp;{{article.created |date:"Y-m-d "}}&nbsp;
-    <strong>By user:</strong>&nbsp;{{article.user}}
+    <strong>{% trans 'Created' %}:</strong>&nbsp;{{article.created |date:"Y-m-d "}}&nbsp;
+    <strong>{% trans 'By user' %}:</strong>&nbsp;{{article.user}}
     <p class="mt-3">{{article.content | safe}}</p>
 </div>
 <div class="container text-center" style="max-width:500px;">
   {% if user.is_authenticated %}
   <div class="fieldWrapper">
     <hr><br/>
-    <h4>Leave comment:</h4>
+    <h4>{% trans 'Leave comment' %}:</h4>
     <form action="" method="post">
       {% csrf_token %}
       {{ form.comment }}</br>
-      <input type="submit" class="btn btn-success mb-3" style="max-height:50px;" value="Save">
+      <input type="submit" class="btn btn-success mb-3" style="max-height:50px;" value="{% trans 'Save' %}">
     </form>
   </div>
   {% endif %}
 
     {% if comments %}
-    <h4>Comments:</h4>
+    <h4>{% trans 'Comments' %}:</h4>
     {% endif %}
     {% for comment in comments %}
       <p>{{ comment.reviewer }}, {{ comment.created }}</p>
       <p>{{ comment.comment }}</p>
       {% if user.is_authenticated %}
-      <a href="{% url 'comment_update' comment.pk %}" class="btn btn-outline-success mb-3" style="max-height:50px;">Update</a>
-      <a href="{% url 'comment_delete' comment.pk %}" class="btn btn-outline-danger mb-3" style="max-height:50px;">Delete</a>
+      <a href="{% url 'comment_update' comment.pk %}" class="btn btn-outline-success mb-3" style="max-height:50px;">{% trans 'Update' %}</a>
+      <a href="{% url 'comment_delete' comment.pk %}" class="btn btn-outline-danger mb-3" style="max-height:50px;">{% trans 'Delete' %}</a>
       {% endif %}
     <hr/>
   {% endfor %}
