--- a/mysite/blog/templates/my_article_detail.html
+++ b/mysite/blog/templates/my_article_detail.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
-
-{% block title %}Article{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Article' %}{% endblock %}
 
 {% block content %}
 <div class="container mb-3 mt-3 text-center" >
-    <h3 style="font-style:italic;">My article: {{article.title}}</h3>
-    <strong>Created:</strong>&nbsp;{{article.created |date:"Y-m-d "}}&nbsp;
+    <h3 style="font-style:italic;">{% trans 'My article' %}: {{article.title}}</h3>
+    <strong>{% trans 'Created' %}:</strong>&nbsp;{{article.created |date:"Y-m-d "}}&nbsp;
     <p class="mt-3">{{article.content | safe}}</p>
     <div class="row d-flex justify-content-center">
-        <a class="btn btn-grad my-3" href="{% url 'article-update' article.pk %}" style="min-width:100px">Update</a>
-        <a class="btn btn-delete my-3" href="{% url 'my_articles' %}" style="min-width:100px">Cancel</a>
-        <a class="btn btn-delete my-3" href="{% url 'article-delete' article.pk %}" >Delete</a>
+        <a class="btn btn-grad my-3" href="{% url 'article-update' article.pk %}" style="min-width:100px">{% trans 'Update' %}</a>
+        <a class="btn btn-delete my-3" href="{% url 'my_articles' %}" style="min-width:100px">{% trans 'Cancel' %}</a>
+        <a class="btn btn-delete my-3" href="{% url 'article-delete' article.pk %}" >{% trans 'Delete' %}</a>
     </div>
 </div>
 {% endblock %}
