--- a/mysite/blog/templates/profile.html
+++ b/mysite/blog/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% load i18n %}
-{% block title %}Profile{% endblock %}
+{% block title %}{% trans 'Profile' %}{% endblock %}
 {% block content %}
     <div class="container d-flex flex-column justify-content-center" style="max-width:500px;">
         {% if messages %}
@@ -15,11 +15,11 @@
        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4 mt-2">Profile fields</legend>
+                <legend class="border-bottom mb-4 mt-2">{% trans 'Profile fields' %}</legend>
                 {{ u_form|crispy }}
             </fieldset>
             <div class="form-group my-4 d-flex justify-content-center">
-                <button class="btn btn btn-grad" type="submit">Update</button>
+                <button class="btn btn btn-grad" type="submit">{% trans 'Update' %}</button>
             </div>
         </form>
     </div>
