--- a/mysite/blog/templates/registration/password_reset_confirm.html
+++ b/mysite/blog/templates/registration/password_reset_confirm.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Confirm{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Confirm' %}{% endblock %}
 {% block content %}
     {% if validlink %}
     <div class="container mb-3 mt-3" style="max-width:500px; height:100vh">
         <div class="row d-flex justify-content-center">
-            <h3>Enter new password two times</h3>
+            <h3>{% trans 'Enter new password two times' %}</h3>
         </div>
         <div class="row d-flex justify-content-center">
            <form method="post">
@@ -12,23 +13,23 @@
                 <table>
                     <tr>
                         <td>{{ form.new_password1.errors }}
-                            <label for="id_new_password1">New password:</label></td>
+                            <label for="id_new_password1">{% trans 'New password' %}:</label></td>
                         <td>{{ form.new_password1 }}</td>
                     </tr>
                     <tr>
                         <td>{{ form.new_password2.errors }}
-                            <label for="id_new_password2">Repeat password:</label></td>
+                            <label for="id_new_password2">{% trans 'Repeat password' %}:</label></td>
                         <td>{{ form.new_password2 }}</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td><input type="submit" class="btn btn-grad my-3" style="max-width:200px; margin:0 auto;" value="Change" /></td>
+                        <td><input type="submit" class="btn btn-grad my-3" style="max-width:200px; margin:0 auto;" value="{% trans 'Confirm' %}" /></td>
                     </tr>
                 </table>
             </form>
         {% else %}
-            <h3>Failed to change password</h3>
-            <p>Password link have been expired, initiate new password changing link again</p>
+            <h3>{% trans 'Failed to change password' %}</h3>
+            <p>{% trans 'Password link have been expired, initiate new password changing link again' %}</p>
         {% endif %}
         </div>
     </div>
