--- a/mysite/blog/templates/registration/password_reset_form.html
+++ b/mysite/blog/templates/registration/password_reset_form.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Reset{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Reset' %}{% endblock %}
 {% block content %}
   <form class="container mb-3 mt-3 text-center" method="post">
   {% csrf_token %}
   {% if form.email.errors %}
     {{ form.email.errors }}
   {% endif %}
-      <h3  style="font-style:italic;">Enter you email</h3>
+      <h3  style="font-style:italic;">{% trans 'Enter you email' %}</h3>
       <p>{{ form.email }}</p>
-    <input type="submit"  class="btn btn-grad my-3" style="max-width:200px; margin:0 auto;" value="Reset password" >
+    <input type="submit"  class="btn btn-grad my-3" style="max-width:200px; margin:0 auto;" value="{% trans 'Reset password' %}" >
   </form>
 {% endblock %}
