--- a/mysite/blog/templates/registration/register.html
+++ b/mysite/blog/templates/registration/register.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Register{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Register' %}{% endblock %}
 {% block content %}
 
     {% if messages %}
@@ -11,31 +12,31 @@
     {% endif %}
 
     <div class="container register text-center " style="max-width:500px;">
-        <h3>Registration</h3><br/>
+        <h3>{% trans 'Registration' %}</h3><br/>
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="username">User's name</label>
+                <label for="username">{% trans "User's name" %}</label>
                 <input name="username" type="text" class="form-control" id="username" aria-describedby="usernameHelp">
-                <small id="usernameHelp" class="form-text text-muted">Until 150 symbols.</small>
+                <small id="usernameHelp" class="form-text text-muted">{% trans 'Until 150 symbols.' %}</small>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Email</label>
+                <label for="exampleInputEmail1">{% trans 'Email' %}</label>
                 <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <small id="emailHelp" class="form-text text-muted">It is needed only for creating new account </small>
+                <small id="emailHelp" class="form-text text-muted">{% trans 'It is needed only for creating new account' %}</small>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">{% trans 'Password' %}</label>
                 <input name="password" type="password" class="form-control" id="password" aria-describedby="pwdHelp">
-                <small id="pwdHelp" class="form-text text-muted">Not less 8 symbols, can't be only numbers</small>
+                <small id="pwdHelp" class="form-text text-muted">{% trans "Not less 8 symbols, can't be only numbers" %}</small>
             </div>
             <div class="form-group">
-                <label for="password2">Repeat Password</label>
+                <label for="password2">{% trans 'Repeat Password' %}</label>
                 <input name="password2" type="password" class="form-control" id="password2" aria-describedby="pwd2Help">
             </div>
-            <button type="submit" class="btn btn-grad my-3" style="max-width:200px; margin:0 auto;">Register</button>
+            <button type="submit" class="btn btn-grad my-3" style="max-width:200px; margin:0 auto;">{% trans 'Register' %}</button>
         </form>
-        <p>If you were registered before, you can <a href="{% url 'login' %}"><strong>Log In.</strong></a></p>
+        <p>{% trans 'If you were registered before, you can' %} <a href="{% url 'login' %}"><strong>{% trans 'Log In' %}</strong></a></p>
     </div>
 
 {% endblock %}
